<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/trivia_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_category"
        android:layout_centerHorizontal="true"
        android:text="@string/trivia_app_name"
        android:textAlignment="center"
        android:textColor="#A8A8FF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/select_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/spinner_category"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/select_category"
        android:textAlignment="center"
        android:textColor="#A8A8FF"
        android:textSize="35sp" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_difficulty"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"></Spinner>

    <TextView
        android:id="@+id/select_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner_difficulty"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/select_difficulty"
        android:textAlignment="center"
        android:textColor="#A8A8FF"
        android:textSize="35sp" />

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:dropDownWidth="wrap_content"
        android:textAlignment="center"></Spinner>

    <Button
        android:id="@+id/start_quiz"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_difficulty"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor = "#A8A8FF"
        android:background="#E6F6FF"
        android:text="@string/start_button" />


   <TextView
        android:id="@+id/txtJSON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>