<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:text="Here is where the question will display!"
        android:textAlignment="center"
        android:textColor="#4B4B4B"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="223dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/button1"
            android:padding="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:layout_centerHorizontal="true"
            android:text="@string/answer1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/button2"
            android:padding="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button1"
            android:layout_centerHorizontal="true"
            android:text="@string/answer2"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/button3"
            android:padding="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button2"
            android:layout_centerHorizontal="true"
            android:text="@string/answer3"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/button4"
            android:padding="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button3"
            android:layout_centerHorizontal="true"
            android:text="@string/answer4"
            android:onClick="onRadioButtonClicked"/>


    </RadioGroup>

   <!-- <Button
        android:id="@+id/nextQuestion"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"
        android:text="Next" />-->





</android.support.constraint.ConstraintLayout>